production/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webserver-prod
  labels:
    app: webserver
    environment: production
